--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "dams-services",
-  "version": "1.0.0",
+  "name": "energy-node-application",
+  "version": "0.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rajeshkannanrajagopal/DAMS-SERVICES.git"
-  },
+    "ng": "ng",
+    "start": "ng serve && node ./server/app.js",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  }, 
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rajeshkannanrajagopal/DAMS-SERVICES/issues"
-  },
-  "homepage": "https://github.com/rajeshkannanrajagopal/DAMS-SERVICES#readme",
+  "license": "ISC",  
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
