--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
-},
-  
+  },
   "author": "",
   "license": "ISC",
-  
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -17,6 +15,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
     "generate-password": "^1.6.1",
+    "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mssql": "^7.2.1",
