--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "energy-node-staging",
+  "name": "dams-services",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rajeshkannanrajagopal/DAMS-SERVICES.git"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/rajeshkannanrajagopal/DAMS-SERVICES/issues"
+  },
+  "homepage": "https://github.com/rajeshkannanrajagopal/DAMS-SERVICES#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
+    "fs": "0.0.1-security",
     "generate-password": "^1.6.1",
     "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
