--- a/package.json
+++ b/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "dams-services",
+  "name": "energy-node-staging",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rajeshkannanrajagopal/DAMS-SERVICES.git"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rajeshkannanrajagopal/DAMS-SERVICES/issues"
-  },
-  "homepage": "https://github.com/rajeshkannanrajagopal/DAMS-SERVICES#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
