Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_energydevwebapplication.yml
+++ b/.github/workflows/main_energydevwebapplication.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: 'node|12-lts'
 
       - name: npm install, build, and test
         run: |
@@ -52,5 +52,5 @@ jobs:
         with:
           app-name: 'EnergyDevWebApplication'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2A4DFF1B077A40FBA6A0D098330540FA }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_11D372893BA84DAD876B184A4DB05A0D }}
           package: .
