--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2",
     "tedious": "^12.0.0",
+    "twilio": "^3.81.0",
     "uuid": "^8.3.2"
   }
 }
