--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.1.1",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
@@ -22,8 +24,10 @@
     "mssql": "^7.2.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.7.0",
     "nodemon": "^2.0.14",
+    "qs": "^6.11.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sequelize": "^6.6.5",
