--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cron": "^2.1.0",
     "crypto-js": "^4.1.1",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
