--- a/.github/workflows/main_energydevwebapplication.yml
+++ b/.github/workflows/main_energydevwebapplication.yml
@@ -33,12 +33,12 @@ jobs:
       #     name: node-app
       #     path: .
 
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   environment:
-  #     name: "Production"
-  #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: "Production"
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       # - name: Download artifact from build job
