--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2",
     "tedious": "^12.0.0",
+    "tuya-cloud-api": "^1.1.0",
     "twilio": "^3.81.0",
     "uuid": "^8.3.2"
   }
